# playlist-sync

./: .env.example  .gitignore  BUG_REPORT_COMPARISON_RESULTS.md  CLAUDE.md  README.MD  pyproject.toml
src/spotsync/: __init__.py  __main__.py  cli.py  comparer.py  matcher.py  parser.py  spotify_api.py  tui.py
tests/: __init__.py  test_comparer.py  test_matcher.py  test_parser.py  test_tui_debug.py
